feat(api): add '/leaderboards' endpoint
